--- a/assets/css/sonivore-style.css
+++ b/assets/css/sonivore-style.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Saira+Stencil+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@import url("https: //fonts.googleapis.com/css?family=Open+Sans: 400, 700&display=swap");
+
+
 :root {
     --sonivore-blue-100: #e0e4ff;
     --sonivore-blue-200: #a6afff;
@@ -34,4 +39,13 @@
     --sonivore-purple-300: #d066ff;
     --sonivore-purple-400: #bf33ff;
     --sonivore-purple-500: #9a00dd;
+}
+
+.sonivore-title {
+    background-image: url('../images/sonivore-logo.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+
+    width: 1920px;
+    height: 1080px;
 }
