--- a/main.css
+++ b/main.css
@@ -84,6 +84,30 @@ header {
   background-color: var(--sonivore-black-500);
 }
 
+header h2 {
+  margin: 0;
+}
+
+nav ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 50px;
+}
+
+nav ul li {
+  margin-left: 20px;
+}
+
+nav ul li a {
+  color: #fff;
+  text-decoration: none;
+}
+
+nav ul li a:hover {
+  text-decoration: underline;
+}
+
 body {
   margin: 15px;
   height: 100vh;
