--- a/main.css
+++ b/main.css
@@ -4,6 +4,8 @@
 * {
   font-family: 'Montserrat', 'Saira Stencil One', sans-serif;
   line-height: 0.5f;
+
+  color: white;
 }
 
 html {
@@ -55,7 +57,6 @@ h6 {
 
 p {
   margin-bottom: 1rem;
-  color: var(--sonivore-black-400);
   font-size: 1rem;
 }
 
@@ -66,15 +67,16 @@ header {
   left: 0;
 
   /* padding and sizing */
-  padding: 25px;
+  padding-left: 15px;
+  margin-right: 15px;
   width: 100%;
-  height: 50px;
+
 
   /* display and alignment */
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: baseline;
 
   /* z-index to keep on top of other elements */
   z-index: 1000;
@@ -84,19 +86,14 @@ header {
   background-color: var(--sonivore-black-500);
 }
 
-header h2 {
-  margin: 0;
-}
-
 nav ul {
   display: flex;
   list-style: none;
-  margin: 0;
-  padding: 50px;
+  margin-right: 15px;
 }
 
 nav ul li {
-  margin-left: 20px;
+  margin-right: 20px;
 }
 
 nav ul li a {
@@ -110,6 +107,7 @@ nav ul li a:hover {
 
 body {
   margin: 15px;
+  padding-top: 15%;
   height: 100vh;
 }
 
