--- a/main.css
+++ b/main.css
@@ -8,12 +8,6 @@
   color: white;
 }
 
-html {
-  background-color: var(--sonivore-black-500);
-  background-size: cover;
-  background-repeat: repeat-y;
-  background-position: center;
-}
 
 a {
   text-decoration: none;
@@ -27,6 +21,7 @@ h3,
 h4,
 h5,
 h6 {
+  margin-top: 1rem;
   margin-bottom: 1rem;
   font-family: 'Montserrat', sans-serif;
 }
@@ -143,20 +138,33 @@ footer {
   min-height: 50vh;
 }
 
+.background-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
 .column-container {
   display: flex;
   flex-direction: column;
 
   justify-content: center;
-  align-items: center;
 }
 
 .row-container {
   display: flex;
   flex-direction: row;
 
-  justify-content: center;
-  align-items: center;
+  justify-content: space-evenly;
+  align-items: baseline;
+}
+
+.row-item {
+  margin: 0 20px;
 }
 
 .square-ratio {
